<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:id="@+id/LinearLayout_sign"
     >
    
    <!--<EditText
        android:id="@+id/user_login_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inputPhone"
        android:maxLength="11"
        android:drawableLeft="@drawable/phone"
        android:inputType="phone"
        />
    <EditText 
        android:id="@+id/user_login_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inputPwd"
        android:maxLength="15"
        android:drawableLeft="@drawable/tanhao"
        android:inputType="textPassword"
        android:layout_below="@+id/user_login_name"
        />
    <Button 
        android:id="@+id/user_login_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sure"
        android:background="@drawable/shape_button"
        android:layout_below="@+id/user_login_check"
       />-->


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:layout_marginTop="@dimen/login_layout_margin"
        android:background="@color/line_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        android:background="@drawable/layout_selector"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/login_layout_padding"
        android:paddingRight="@dimen/login_layout_padding" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_user_icon" />

        <View
            android:layout_width="@dimen/line_height"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/login_line_padding_vertical"
            android:layout_marginLeft="@dimen/login_line_padding_horizontal"
            android:layout_marginRight="@dimen/login_line_padding_horizontal"
            android:layout_marginTop="@dimen/login_line_padding_vertical"
            android:background="@color/line_bg" />

        <EditText
            android:id="@+id/user_login_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/translucence"
            android:digits="@string/edit_text_type"
            android:hint="@string/inputPhone"
            android:maxLength="@string/max_length_username"
            android:singleLine="true"
            android:textColor="@color/text_color" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/line_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        android:background="@drawable/layout_selector"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/login_layout_padding"
        android:paddingRight="@dimen/login_layout_padding" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_password_icon" />

        <View
            android:layout_width="@dimen/line_height"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/login_line_padding_vertical"
            android:layout_marginLeft="@dimen/login_line_padding_horizontal"
            android:layout_marginRight="@dimen/login_line_padding_horizontal"
            android:layout_marginTop="@dimen/login_line_padding_vertical"
            android:background="@color/line_bg" />

        <EditText
            android:id="@+id/user_login_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/translucence"
            android:digits="@string/edit_text_type"
            android:hint="@string/inputPwd"
            android:inputType="textPassword"
            android:singleLine="true"
            android:maxLength="@string/max_length_password"
            android:textColor="@color/text_color" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/line_bg" />

    <Button
        android:id="@+id/user_login_login"
        style="@style/RedButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        android:layout_marginLeft="@dimen/login_layout_padding"
        android:layout_marginRight="@dimen/login_layout_padding"
        android:layout_marginTop="@dimen/login_button_padding"
        android:text="@string/sign" />

</LinearLayout>
